--- a/valeurs/school_journal.html
+++ b/valeurs/school_journal.html
@@ -51,7 +51,7 @@
         <div align="center">
 
           <div class="img">
-            <img src="images/cyprien.gif" alt="Pourquoi ?" width="200">
+            <img src="http://hipeter.co/images/cyprien.gif" alt="Pourquoi ?" width="200">
           </div>
 
           <div>
@@ -67,7 +67,7 @@
           </div>
       
           <div class="img">
-            <img src="images/carnet.png" alt="Peter Logo" width="200">
+            <img src="http://hipeter.co/images/carnet.png" alt="Peter Logo" width="200">
           </div>
 
         </div>
